[package]
name = "doug"
version = "0.1.0"
authors = ["Cole Poirier <colepoirier@gmail.com>"]
edition = "2021"

[dependencies]
num-traits = "0.2.14"
anyhow = "1.0.53"
derive_more = "0.99.17"
prost = "0.9.0"
bevy_prototype_lyon = "0.4.0"
bevy-inspector-egui = "0.7.5"
layout21 = { git = "https://github.com/dan-fritchman/Layout21.git" }

[dependencies.bevy]
version = "0.6.0"
default-features = false
features = ["bevy_winit", "render", "png", "x11"]
