[package]
name = "doug"
version = "0.1.0"
authors = ["Cole Poirier <colepoirier@gmail.com>"]
edition = "2021"

[dependencies]
derive_more = "0.99.17"
bevy_prototype_lyon = "0.4.0"
bevy-inspector-egui = "0.9.0"
bevy_framepace = "0.3.0"
bevy_egui = "0.12.1"
lyon_algorithms = "0.17.7"
lyon_geom = "0.17.6"
layout21raw = { git = "https://github.com/colepoirier/Layout21" }
vlsir = "0.2.1"
rfd = "0.8.1"
futures-lite = "1.12.0"

[dependencies.bevy]
version = "0.6.1"
default-features = false
features = ["bevy_winit", "render", "x11", "dynamic"]

[profile.dev.package.layout21raw]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1
