[package]
name = "doug"
version = "0.1.0"
authors = ["Cole Poirier <colepoirier@gmail.com>"]
edition = "2021"

[dependencies]
bevy_prototype_lyon = "0.10.0"
bevy-inspector-egui = "0.22.1"
# bevy_framepace = "0.3.0"
bevy_egui = "0.24.0"
lyon_algorithms = "1.0.3"
lyon_geom = "1.0.4"
layout21 = { git = "https://github.com/colepoirier/Layout21" }
vlsir = "1.0.0"
rfd = "0.12.1"
futures-lite = "2.0.1"
sorted-vec = "0.8.2"
geo = "0.27.0"
bevy_mod_debugdump = "0.9.0"
bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
bevy_mod_picking = { version = "0.17.0", default-features = false, features = [
    "selection",
    "debug",
    "backend_sprite",
    "backend_egui",
    "backend_bevy_ui",
    "backend_raycast",
] }

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = ["bevy_winit", "bevy_render", "multi-threaded"]

[target.'cfg(unix)'.dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "x11",
    "dynamic_linking",
    "multi-threaded",
    "bevy_sprite",
    "bevy_ui",
]

[profile.dev.package.layout21]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1
